Parallax works on new vid. However... it's a weird mix of % and vw/vh.
The iframe bg video linked from Vimeo is the only element that is made responsive with vw/vh. If possible, you should fix this. But... when you try to style it like the old (un-colored) video, there are green bars on either side. No full coverage. No idea why.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -162,13 +162,13 @@ a {
 
 #vimeo {
 	position: absolute;
+	top: -28.125vw;
 	width: 100vw;
 	height: 56.25vw;
 	min-height: 100vh;
 	min-width: 177.77vh;
 	z-index: 100;
 }
-
 			
 .button {
 	position: absolute;
@@ -211,6 +211,7 @@ a {
 	bottom: 0;
 	background: white;
 	z-index: 2000;
+	//display: none;
 }
 
 #package {
