Got old video back in.
I'm gonna get the new one in but Vimeo is being a money hungry corp right now so I'll have to host the video for a minute.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -211,15 +211,38 @@ a {
 /* line 163, ../sass/screen.scss */
 #vimeo {
   position: absolute;
-  top: -28.125vw;
-  width: 100vw;
-  height: 56.25vw;
-  min-height: 100vh;
-  min-width: 177.77vh;
+  top: 50%;
+  left: 50%;
   z-index: 100;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
 }
 
-/* line 173, ../sass/screen.scss */
+/*
+#vimeo {
+	position: absolute;
+	top: -40%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: 100;
+}
+*/
+/*
+#vimeo {
+	position: absolute;
+	top: -28.125vw;
+	width: 100vw;
+	height: 56.25vw;
+	min-height: 100vh;
+	min-width: 177.77vh;
+	z-index: 100;
+}
+*/
+/* line 198, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -242,19 +265,19 @@ a {
   transition: 0.2s;
 }
 
-/* line 196, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
 .button:hover {
   background-color: #00CC99;
   border-color: #00CC99;
   transition: 0.2s;
 }
 
-/* line 207, ../sass/screen.scss */
+/* line 232, ../sass/screen.scss */
 #bar {
   position: absolute;
   width: 100%;
@@ -264,99 +287,99 @@ a {
   z-index: 2000;
 }
 
-/* line 217, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 222, ../sass/screen.scss */
+/* line 247, ../sass/screen.scss */
 #resolution {
   background-color: white;
   color: #CFCFCF;
 }
 
-/* line 227, ../sass/screen.scss */
+/* line 252, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 232, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 237, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 242, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
 
-/* line 247, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 .white_non:hover {
   background: transparent;
   box-shadow: inset 0 0 0 2px white;
   color: white;
 }
 
-/* line 253, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .white_non:active {
   background: white;
   color: black;
 }
 
-/* line 258, ../sass/screen.scss */
+/* line 283, ../sass/screen.scss */
 .white_active {
   background: white;
   color: black;
 }
 
-/* line 263, ../sass/screen.scss */
+/* line 288, ../sass/screen.scss */
 .white_active:hover {
   background: white;
   color: black;
 }
 
-/* line 268, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .black_non:hover {
   background-color: transparent;
   color: black;
   box-shadow: inset 0 0 0 2px black;
 }
 
-/* line 274, ../sass/screen.scss */
+/* line 299, ../sass/screen.scss */
 .black_active {
   background: black;
   color: white;
 }
 
-/* line 279, ../sass/screen.scss */
+/* line 304, ../sass/screen.scss */
 .black_active:hover {
   background: black;
   color: white;
 }
 
-/* line 284, ../sass/screen.scss */
+/* line 309, ../sass/screen.scss */
 .win {
   background: black;
   color: white;
 }
 
-/* line 289, ../sass/screen.scss */
+/* line 314, ../sass/screen.scss */
 .win:hover {
   background: black;
   color: white;
 }
 
-/* line 294, ../sass/screen.scss */
+/* line 319, ../sass/screen.scss */
 .heart {
   fill: white;
   width: 40px;
@@ -364,33 +387,33 @@ a {
   transition: 0.2s;
 }
 
-/* line 301, ../sass/screen.scss */
+/* line 326, ../sass/screen.scss */
 .heart:active {
   fill: black;
 }
 
-/* line 305, ../sass/screen.scss */
+/* line 330, ../sass/screen.scss */
 #logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 311, ../sass/screen.scss */
+/* line 336, ../sass/screen.scss */
 #logo:hover {
   height: 44px;
   margin-top: 3px;
   margin-left: -1px;
 }
 
-/* line 317, ../sass/screen.scss */
+/* line 342, ../sass/screen.scss */
 #real_logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 323, ../sass/screen.scss */
+/* line 348, ../sass/screen.scss */
 #real_logo:hover {
   height: 44px;
   margin-top: 3px;
@@ -398,44 +421,44 @@ a {
   transition: 0.2s;
 }
 
-/* line 332, ../sass/screen.scss */
+/* line 357, ../sass/screen.scss */
 #real_logo:active .cls-2 {
   fill: white;
 }
 
-/* line 337, ../sass/screen.scss */
+/* line 362, ../sass/screen.scss */
 .cls-1 {
   fill: none;
 }
 
-/* line 340, ../sass/screen.scss */
+/* line 365, ../sass/screen.scss */
 .cls-2 {
   fill: white;
 }
 
-/* line 344, ../sass/screen.scss */
+/* line 369, ../sass/screen.scss */
 .murder {
   fill: black;
   transition: 0.2s;
 }
 
-/* line 349, ../sass/screen.scss */
+/* line 374, ../sass/screen.scss */
 .black_active:hover {
   background: black;
 }
 
-/* line 353, ../sass/screen.scss */
+/* line 378, ../sass/screen.scss */
 .gap {
   background: black;
   color: white;
 }
 
-/* line 358, ../sass/screen.scss */
+/* line 383, ../sass/screen.scss */
 .arrow {
   fill: black;
 }
 
-/* line 362, ../sass/screen.scss */
+/* line 387, ../sass/screen.scss */
 #liney {
   position: absolute;
   left: 50%;
