--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -162,6 +162,30 @@ a {
 
 #vimeo {
 	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 100;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	transform: translate(-50%, -50%);
+}
+
+/*
+#vimeo {
+	position: absolute;
+	top: -40%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: 100;
+}
+*/
+
+/*
+#vimeo {
+	position: absolute;
 	top: -28.125vw;
 	width: 100vw;
 	height: 56.25vw;
@@ -169,6 +193,7 @@ a {
 	min-width: 177.77vh;
 	z-index: 100;
 }
+*/
 			
 .button {
 	position: absolute;
