--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -120,7 +120,7 @@ a {
 	position: absolute;
 	height: 100%;
 	width: 1px;
-	background-color: white;
+	background-color: rgba(black, 0.3);
 	z-index: 1000;
 	opacity: 0.5;
 	//display: none;
