--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -166,7 +166,7 @@ a {
   position: absolute;
   height: 100%;
   width: 1px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 1000;
   opacity: 0.5;
 }
