Put in image for the resolution/4k section.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -298,88 +298,96 @@ a {
   background-color: white;
   color: #CFCFCF;
 }
+/* line 251, ../sass/screen.scss */
+#resolution img {
+  position: absolute;
+  width: 35%;
+  right: 10%;
+  top: 50%;
+  transform: translate(0, -50%);
+}
 
-/* line 252, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 257, ../sass/screen.scss */
+/* line 265, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 262, ../sass/screen.scss */
+/* line 270, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 267, ../sass/screen.scss */
+/* line 275, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
 
-/* line 272, ../sass/screen.scss */
+/* line 280, ../sass/screen.scss */
 .white_non:hover {
   background: transparent;
   box-shadow: inset 0 0 0 2px white;
   color: white;
 }
 
-/* line 278, ../sass/screen.scss */
+/* line 286, ../sass/screen.scss */
 .white_non:active {
   background: white;
   color: black;
 }
 
-/* line 283, ../sass/screen.scss */
+/* line 291, ../sass/screen.scss */
 .white_active {
   background: white;
   color: black;
 }
 
-/* line 288, ../sass/screen.scss */
+/* line 296, ../sass/screen.scss */
 .white_active:hover {
   background: white;
   color: black;
 }
 
-/* line 293, ../sass/screen.scss */
+/* line 301, ../sass/screen.scss */
 .black_non:hover {
   background-color: transparent;
   color: black;
   box-shadow: inset 0 0 0 2px black;
 }
 
-/* line 299, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 .black_active {
   background: black;
   color: white;
 }
 
-/* line 304, ../sass/screen.scss */
+/* line 312, ../sass/screen.scss */
 .black_active:hover {
   background: black;
   color: white;
 }
 
-/* line 309, ../sass/screen.scss */
+/* line 317, ../sass/screen.scss */
 .win {
   background: black;
   color: white;
 }
 
-/* line 314, ../sass/screen.scss */
+/* line 322, ../sass/screen.scss */
 .win:hover {
   background: black;
   color: white;
 }
 
-/* line 319, ../sass/screen.scss */
+/* line 327, ../sass/screen.scss */
 .heart {
   fill: white;
   width: 40px;
@@ -387,33 +395,33 @@ a {
   transition: 0.2s;
 }
 
-/* line 326, ../sass/screen.scss */
+/* line 334, ../sass/screen.scss */
 .heart:active {
   fill: black;
 }
 
-/* line 330, ../sass/screen.scss */
+/* line 338, ../sass/screen.scss */
 #logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 336, ../sass/screen.scss */
+/* line 344, ../sass/screen.scss */
 #logo:hover {
   height: 44px;
   margin-top: 3px;
   margin-left: -1px;
 }
 
-/* line 342, ../sass/screen.scss */
+/* line 350, ../sass/screen.scss */
 #real_logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 348, ../sass/screen.scss */
+/* line 356, ../sass/screen.scss */
 #real_logo:hover {
   height: 44px;
   margin-top: 3px;
@@ -421,44 +429,44 @@ a {
   transition: 0.2s;
 }
 
-/* line 357, ../sass/screen.scss */
+/* line 365, ../sass/screen.scss */
 #real_logo:active .cls-2 {
   fill: white;
 }
 
-/* line 362, ../sass/screen.scss */
+/* line 370, ../sass/screen.scss */
 .cls-1 {
   fill: none;
 }
 
-/* line 365, ../sass/screen.scss */
+/* line 373, ../sass/screen.scss */
 .cls-2 {
   fill: white;
 }
 
-/* line 369, ../sass/screen.scss */
+/* line 377, ../sass/screen.scss */
 .murder {
   fill: black;
   transition: 0.2s;
 }
 
-/* line 374, ../sass/screen.scss */
+/* line 382, ../sass/screen.scss */
 .black_active:hover {
   background: black;
 }
 
-/* line 378, ../sass/screen.scss */
+/* line 386, ../sass/screen.scss */
 .gap {
   background: black;
   color: white;
 }
 
-/* line 383, ../sass/screen.scss */
+/* line 391, ../sass/screen.scss */
 .arrow {
   fill: black;
 }
 
-/* line 387, ../sass/screen.scss */
+/* line 395, ../sass/screen.scss */
 #liney {
   position: absolute;
   left: 50%;
