--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -247,6 +247,14 @@ a {
 #resolution {
 	background-color: white;
 	color: $gray;
+
+	img {
+		position: absolute;
+		width: 35%;
+		right: 10%;
+		top: 50%;
+		transform: translate(0, -50%)
+	}
 }
 
 #stills {
