--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -252,8 +252,16 @@ a {
 		position: absolute;
 		width: 35%;
 		right: 10%;
-		top: 50%;
-		transform: translate(0, -50%)
+		bottom: 0%;
+		transition: 0.8s;
+		opacity: 0;
+	}
+
+	.appear {
+		bottom: 50%;
+		transform: translate(0, 50%);
+		transition: 0.8s;
+		opacity: 1;
 	}
 }
 
