--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -308,7 +308,7 @@ a {
   transition: 0.6s;
 }
 /* line 261, ../sass/screen.scss */
-#resolution .appear {
+#resolution .res-class {
   bottom: 50%;
   transform: translate(0%, 50%);
   transition: 0.6s;
