--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -298,104 +298,99 @@ a {
   background-color: white;
   color: #CFCFCF;
 }
+
 /* line 252, ../sass/screen.scss */
-#resolution img {
+#res-img {
   position: absolute;
   width: 35%;
   right: 10%;
-  bottom: 0%;
-  opacity: 0;
-  transition: 0.6s;
-}
-/* line 261, ../sass/screen.scss */
-#resolution .res-class {
   bottom: 50%;
   transform: translate(0%, 50%);
   transition: 0.6s;
   opacity: 1;
 }
 
-/* line 271, ../sass/screen.scss */
+/* line 262, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 276, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 281, ../sass/screen.scss */
+/* line 272, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 286, ../sass/screen.scss */
+/* line 277, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
 
-/* line 291, ../sass/screen.scss */
+/* line 282, ../sass/screen.scss */
 .white_non:hover {
   background: transparent;
   box-shadow: inset 0 0 0 2px white;
   color: white;
 }
 
-/* line 297, ../sass/screen.scss */
+/* line 288, ../sass/screen.scss */
 .white_non:active {
   background: white;
   color: black;
 }
 
-/* line 302, ../sass/screen.scss */
+/* line 293, ../sass/screen.scss */
 .white_active {
   background: white;
   color: black;
 }
 
-/* line 307, ../sass/screen.scss */
+/* line 298, ../sass/screen.scss */
 .white_active:hover {
   background: white;
   color: black;
 }
 
-/* line 312, ../sass/screen.scss */
+/* line 303, ../sass/screen.scss */
 .black_non:hover {
   background-color: transparent;
   color: black;
   box-shadow: inset 0 0 0 2px black;
 }
 
-/* line 318, ../sass/screen.scss */
+/* line 309, ../sass/screen.scss */
 .black_active {
   background: black;
   color: white;
 }
 
-/* line 323, ../sass/screen.scss */
+/* line 314, ../sass/screen.scss */
 .black_active:hover {
   background: black;
   color: white;
 }
 
-/* line 328, ../sass/screen.scss */
+/* line 319, ../sass/screen.scss */
 .win {
   background: black;
   color: white;
 }
 
-/* line 333, ../sass/screen.scss */
+/* line 324, ../sass/screen.scss */
 .win:hover {
   background: black;
   color: white;
 }
 
-/* line 338, ../sass/screen.scss */
+/* line 329, ../sass/screen.scss */
 .heart {
   fill: white;
   width: 40px;
@@ -403,33 +398,33 @@ a {
   transition: 0.2s;
 }
 
-/* line 345, ../sass/screen.scss */
+/* line 336, ../sass/screen.scss */
 .heart:active {
   fill: black;
 }
 
-/* line 349, ../sass/screen.scss */
+/* line 340, ../sass/screen.scss */
 #logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 355, ../sass/screen.scss */
+/* line 346, ../sass/screen.scss */
 #logo:hover {
   height: 44px;
   margin-top: 3px;
   margin-left: -1px;
 }
 
-/* line 361, ../sass/screen.scss */
+/* line 352, ../sass/screen.scss */
 #real_logo {
   height: 40px;
   margin-top: 5px;
   transition: 0.2s;
 }
 
-/* line 367, ../sass/screen.scss */
+/* line 358, ../sass/screen.scss */
 #real_logo:hover {
   height: 44px;
   margin-top: 3px;
@@ -437,44 +432,44 @@ a {
   transition: 0.2s;
 }
 
-/* line 376, ../sass/screen.scss */
+/* line 367, ../sass/screen.scss */
 #real_logo:active .cls-2 {
   fill: white;
 }
 
-/* line 381, ../sass/screen.scss */
+/* line 372, ../sass/screen.scss */
 .cls-1 {
   fill: none;
 }
 
-/* line 384, ../sass/screen.scss */
+/* line 375, ../sass/screen.scss */
 .cls-2 {
   fill: white;
 }
 
-/* line 388, ../sass/screen.scss */
+/* line 379, ../sass/screen.scss */
 .murder {
   fill: black;
   transition: 0.2s;
 }
 
-/* line 393, ../sass/screen.scss */
+/* line 384, ../sass/screen.scss */
 .black_active:hover {
   background: black;
 }
 
-/* line 397, ../sass/screen.scss */
+/* line 388, ../sass/screen.scss */
 .gap {
   background: black;
   color: white;
 }
 
-/* line 402, ../sass/screen.scss */
+/* line 393, ../sass/screen.scss */
 .arrow {
   fill: black;
 }
 
-/* line 406, ../sass/screen.scss */
+/* line 397, ../sass/screen.scss */
 #liney {
   position: absolute;
   left: 50%;
