--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -105,10 +105,13 @@ section {
 
 h1 {
 	position: absolute;
-	bottom: 0.25em;
+	bottom: 50%;
+	transform: translate(0%, 50%);
+	height: (35vw * 9) / 16;
 	left: 10%;
 	font-family: $raleway;
 	font-size: 10em;
+	background-color: red;
 }
 
 
@@ -257,6 +260,16 @@ a {
 	transform: translate(0%, 50%);
 	transition: 0.6s;
 	opacity: 1;	
+}
+
+.line {
+	position: absolute;
+	left: 50%;
+	bottom: 50%;	
+	transform: translate(0%, 50%);
+	width: 1px;
+	height: (35vw * 9) / 16;
+	background-color: black;
 }
 
 #stills {
